--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "react-dev-utils": "^3.0.2",
     "react-dom": "^0.14.8",
     "react-error-overlay": "^1.0.9",
+    "react-redux": "^5.0.5",
+    "react-router": "^2.8.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
@@ -92,9 +96,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1"
   }
